--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
+  "main": "public/tuhiwui.js",
+  "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-start": "electron ."
   },
   "eslintConfig": {
     "extends": "react-app"
